test/sema/typeck/expr/call/function-infer-type-argument.out
error: Argument expects value of type `Bool` but got `Int32`.
--> function-infer-type-argument.dora:33:17
 | 
 | fn expectedConflict(): Bool {
 |     identity[_](1i32)
                   ~~~~
 | }
 | 
error: cannot infer type.
--> function-infer-type-argument.dora:37:14
 | 
 | fn f() {
 |     identity[_](unknown);
                ~
 |     identity[(_, _)](unknownTuple);
 |     same[_](1i32, true);
error: unknown identifier `unknown`.
--> function-infer-type-argument.dora:37:17
 | 
 | fn f() {
 |     identity[_](unknown);
                   ~~~~~~~
 |     identity[(_, _)](unknownTuple);
 |     same[_](1i32, true);
error: cannot infer type.
--> function-infer-type-argument.dora:38:15
 | fn f() {
 |     identity[_](unknown);
 |     identity[(_, _)](unknownTuple);
                 ~
 |     same[_](1i32, true);
 |     sameWithPhantom[_](1i32, true);
error: cannot infer type.
--> function-infer-type-argument.dora:38:18
 | fn f() {
 |     identity[_](unknown);
 |     identity[(_, _)](unknownTuple);
                    ~
 |     same[_](1i32, true);
 |     sameWithPhantom[_](1i32, true);
error: unknown identifier `unknownTuple`.
--> function-infer-type-argument.dora:38:22
 | fn f() {
 |     identity[_](unknown);
 |     identity[(_, _)](unknownTuple);
                        ~~~~~~~~~~~~
 |     same[_](1i32, true);
 |     sameWithPhantom[_](1i32, true);
error: Argument expects value of type `Int32` but got `Bool`.
--> function-infer-type-argument.dora:39:19
 |     identity[_](unknown);
 |     identity[(_, _)](unknownTuple);
 |     same[_](1i32, true);
                     ~~~~
 |     sameWithPhantom[_](1i32, true);
 |     same[_, Bool](1i32, true);
error: expected 2 type parameters but got 1.
--> function-infer-type-argument.dora:40:5
 |     identity[(_, _)](unknownTuple);
 |     same[_](1i32, true);
 |     sameWithPhantom[_](1i32, true);
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 |     same[_, Bool](1i32, true);
 |     foo::bar::baz[_](1, true);
error: Argument expects value of type `Int32` but got `Bool`.
--> function-infer-type-argument.dora:40:30
 |     identity[(_, _)](unknownTuple);
 |     same[_](1i32, true);
 |     sameWithPhantom[_](1i32, true);
                                ~~~~
 |     same[_, Bool](1i32, true);
 |     foo::bar::baz[_](1, true);
error: expected 1 type parameters but got 2.
--> function-infer-type-argument.dora:41:5
 |     same[_](1i32, true);
 |     sameWithPhantom[_](1i32, true);
 |     same[_, Bool](1i32, true);
       ~~~~~~~~~~~~~~~~~~~~~~~~~
 |     foo::bar::baz[_](1, true);
 |     foo::bar::phantom[_](1i32);
error: Argument expects value of type `Int32` but got `Bool`.
--> function-infer-type-argument.dora:41:25
 |     same[_](1i32, true);
 |     sameWithPhantom[_](1i32, true);
 |     same[_, Bool](1i32, true);
                           ~~~~
 |     foo::bar::baz[_](1, true);
 |     foo::bar::phantom[_](1i32);
error: expected 2 type parameters but got 1.
--> function-infer-type-argument.dora:42:5
 |     sameWithPhantom[_](1i32, true);
 |     same[_, Bool](1i32, true);
 |     foo::bar::baz[_](1, true);
       ~~~~~~~~~~~~~~~~~~~~~~~~~
 |     foo::bar::phantom[_](1i32);
 |     foo::bar::phantom(1i32);
error: cannot infer type.
--> function-infer-type-argument.dora:43:23
 |     same[_, Bool](1i32, true);
 |     foo::bar::baz[_](1, true);
 |     foo::bar::phantom[_](1i32);
                         ~
 |     foo::bar::phantom(1i32);
 |     bounded[_](DoesNotImplementTrait());
error: cannot infer type arguments: [_].
--> function-infer-type-argument.dora:44:5
 |     foo::bar::baz[_](1, true);
 |     foo::bar::phantom[_](1i32);
 |     foo::bar::phantom(1i32);
       ~~~~~~~~~~~~~~~~~~~~~~~
 |     bounded[_](DoesNotImplementTrait());
 |     associated(ItemOwner(), true);
error: type `DoesNotImplementTrait` does not implement trait `Trait`.
--> function-infer-type-argument.dora:45:5
 |     foo::bar::phantom[_](1i32);
 |     foo::bar::phantom(1i32);
 |     bounded[_](DoesNotImplementTrait());
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 |     associated(ItemOwner(), true);
 |     associated[Bool](true, 1);
error: Argument expects value of type `Int32` but got `Bool`.
--> function-infer-type-argument.dora:46:29
 |     foo::bar::phantom(1i32);
 |     bounded[_](DoesNotImplementTrait());
 |     associated(ItemOwner(), true);
                               ~~~~
 |     associated[Bool](true, 1);
 |     nestedAssociated(NestedItemOwner(), true);
error: type `Bool` does not implement trait `HasItem`.
--> function-infer-type-argument.dora:47:5
 |     bounded[_](DoesNotImplementTrait());
 |     associated(ItemOwner(), true);
 |     associated[Bool](true, 1);
       ~~~~~~~~~~~~~~~~~~~~~~~~~
 |     nestedAssociated(NestedItemOwner(), true);
 |     nestedAssociated[Bool](true, 1);
error: Argument expects value of type `Int32` but got `Bool`.
--> function-infer-type-argument.dora:48:41
 |     associated(ItemOwner(), true);
 |     associated[Bool](true, 1);
 |     nestedAssociated(NestedItemOwner(), true);
                                           ~~~~
 |     nestedAssociated[Bool](true, 1);
 | }
error: type `Bool` does not implement trait `HasNestedItem`.
--> function-infer-type-argument.dora:49:5
 |     associated[Bool](true, 1);
 |     nestedAssociated(NestedItemOwner(), true);
 |     nestedAssociated[Bool](true, 1);
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 | }
 | 
19 errors found.
